better output on pre installed java (ext disable should fix)